--- a/TemplateProjects.Infra.Crosscutting/TemplateProjects.Infra.Crosscutting.csproj
+++ b/TemplateProjects.Infra.Crosscutting/TemplateProjects.Infra.Crosscutting.csproj
@@ -42,8 +42,24 @@
   <ItemGroup>
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
-    <Compile Include="Helper\StringHelper.cs" />
+    <Compile Include="Helper\HttpClientHelper.cs" />
+    <Compile Include="Helper\TextoHelper.cs" />
+    <Compile Include="Helper\ValidationMessageHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\IResponse.cs" />
+    <Compile Include="Responses\Response.cs" />
+    <Compile Include="Responses\ValidationMessage.cs" />
+    <Compile Include="Responses\ValidationMessages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ValidationMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Responses\ValidationMessages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ValidationMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
